--- a/HoangDieuweb/appsettings.json
+++ b/HoangDieuweb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=LAPTOP-1GK1R9LT\\SQLEXPRESS01;Initial Catalog=Hoangdieuweb;Persist Security Info=True;User ID=sa;Password=;Trust Server Certificate=True"
+  }
 }
